rhai/codegen/ui_tests/rhai_fn_rename_to_index_getter.stderr
error: use attribute 'index_get' instead
  --> ui_tests/rhai_fn_rename_to_index_getter.rs:12:15
   |
12 |     #[rhai_fn(name = "index$get$")]
   |               ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> ui_tests/rhai_fn_rename_to_index_getter.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
